# mlops_w2

./: .gitignore  README.md  pyproject.toml  requirements.txt  tasks.py
.devcontainer/: Dockerfile  devcontainer.json
.dvc/: config
.github/workflows/: codecheck.yaml  codecov.yaml  tests.yaml
data/raw/: corruptmnist_v1.dvc
dockerfiles/: api.dockerfile  evaluate.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
src/week2/: data.py  evaluate.py  model.py  train.py  visualize.py
tests/: __init__.py  test_data.py  test_evaluate.py  test_model.py  test_training.py
